# tock-stm32f407g-disc1

./: .gitignore  README.md  memo.md  memo_old.md
boards/components/: Cargo.toml
boards/stm32f407g_disc1/: Cargo.toml  Makefile  README.md  chip_layout.ld  openocd.cfg
boards/stm32f407g_disc1/src/: io.rs  main.rs
capsules/: Cargo.toml
capsules/src/: lib.rs  lis3dsh.rs
chips/stm32f407vg/: Cargo.toml  README.md
chips/stm32f407vg/src/: chip.rs  dma.rs  lib.rs  rcc.rs  spi.rs  stm32f407vg_nvic.rs  usart.rs
doc/src/: Compilation.md  Design.md  Lifetimes.md  Memory_Isolation.md  OutOfTree.md  Overview.md  Porting.md  Startup.md  Syscalls.md  TockBinaryFormat.md  trd1-trds.md  trd102-adc.md
doc_src/: book.toml
doc_src/src/: Configuration.md  Memory_Layout.md  Mutable_References.md  Registers.md  SUMMARY.md  Soundness.md  Userland.md
docs/: 404.html  CodeReview.html  Compilation.html  Configuration.html  Design.html  Getting_Started.html  Lifetimes.html  Memory_Isolation.html  Memory_Layout.html  Mutable_References.html  Networking_Stack.html  OutOfTree.html  Overview.html  Porting.html  Registers.html  Soundness.html  Startup.html  Style.html  Syscalls.html  TockBinaryFormat.html  Userland.html  index.html  print.html  searchindex.js  searchindex.json
docs/debugging/: index.html
docs/reference/: index.html  trd1-trds.html  trd102-adc.html
docs/syscalls/: 00000_alarm.html  00001_console.html  00002_leds.html  00003_buttons.html  00004_gpio.html  00005_adc.html  00007_analog_comparator.html  00008_low_level_debug.html  30002_udp.html  60001_humidity.html  (+7 more)
(+7 files in other folders)
