[package]
name = "stm32f407g_disc1"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
components = { path = "../../tock/boards/components" }
cortexm4 = { path = "../../tock/arch/cortex-m4" }
capsules = { path = "../../tock/capsules" }
kernel = { path = "../../tock/kernel" }
stm32f407vg = { path = "../../chips/stm32f407vg" }
