[package]
name = "stm32f407vg"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2018"

[dependencies]
cortexm4 = { path = "../../tock/arch/cortex-m4" }
kernel = { path = "../../tock/kernel" }
stm32f4xx = { path = "../../tock/chips/stm32f4xx" }
tock-rt0 = { path = "../../tock/libraries/tock-rt0" }
enum_primitive = { path = "../../tock/libraries/enum_primitive" }
